--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AppName - a new way to collaborate</title>
+    <title>TeamApp - a new way to collaborate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
